[metadata]
name = daemonfixture
summary = Fixture for starting and stopping daemon processes in tests
home-page = https://github.com/freeekanayaka/daemonfixture
description-file = README.rst
author = Free Ekanayaka
author-email = free@ekanayaka.io
license = MIT
platform = POSIX
classifier = 
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python :: 3

[files]
packages = daemonfixture

[extras]
test =
    coverage>=4.2
    python_subunit
    testrepository
